--- a/requirements.txt
+++ b/requirements.txt
@@ -22,19 +22,36 @@ charset-normalizer==3.4.2
     # via requests
 click==8.2.1
     # via
+    #   dask
+    #   distributed
     #   flask
     #   mlflow-skinny
+    #   prefect
     #   uvicorn
 cloudpickle==3.1.1
-    # via mlflow-skinny
+    # via
+    #   dask
+    #   distributed
+    #   mlflow-skinny
+    #   prefect
 contourpy==1.3.2
     # via matplotlib
+croniter==6.0.0
+    # via prefect
 cycler==0.12.1
     # via matplotlib
+dask==2025.5.1
+    # via
+    #   distributed
+    #   prefect
 databricks-sdk==0.57.0
     # via mlflow-skinny
+distributed==2025.5.1
+    # via prefect
 docker==7.1.0
-    # via mlflow
+    # via
+    #   mlflow
+    #   prefect
 fastapi==0.115.12
     # via
     #   -r requirements.in
@@ -43,6 +60,8 @@ flask==3.1.1
     # via mlflow
 fonttools==4.58.2
     # via matplotlib
+fsspec==2025.5.1
+    # via dask
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.44
@@ -67,16 +86,25 @@ idna==3.10
     #   requests
 importlib-metadata==8.7.0
     # via
+    #   dask
     #   mlflow-skinny
     #   opentelemetry-api
+importlib-resources==6.5.2
+    # via prefect
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.6
-    # via flask
+    # via
+    #   distributed
+    #   flask
 joblib==1.5.1
     # via scikit-learn
 kiwisolver==1.4.8
     # via matplotlib
+locket==1.0.0
+    # via
+    #   distributed
+    #   partd
 loguru==0.7.3
     # via -r requirements.in
 mako==1.3.10
@@ -87,12 +115,24 @@ markupsafe==3.0.2
     #   jinja2
     #   mako
     #   werkzeug
+marshmallow==4.0.0
+    # via
+    #   marshmallow-oneofschema
+    #   prefect
+marshmallow-oneofschema==3.2.0
+    # via prefect
 matplotlib==3.10.3
     # via mlflow
 mlflow==3.1.0
     # via -r requirements.in
 mlflow-skinny==3.1.0
     # via mlflow
+msgpack==1.1.1
+    # via
+    #   distributed
+    #   prefect
+mypy-extensions==1.1.0
+    # via prefect
 numpy==2.3.0
     # via
     #   contourpy
@@ -112,17 +152,28 @@ opentelemetry-semantic-conventions==0.55b1
     # via opentelemetry-sdk
 packaging==25.0
     # via
+    #   dask
+    #   distributed
     #   gunicorn
     #   matplotlib
     #   mlflow-skinny
+    #   prefect
 pandas==2.3.0
     # via
     #   -r requirements.in
     #   mlflow
+partd==1.4.2
+    # via dask
+pendulum==3.1.0
+    # via prefect
 pillow==11.2.1
     # via matplotlib
+prefect==1.4.1
+    # via -r requirements.in
 protobuf==6.31.1
     # via mlflow-skinny
+psutil==7.0.0
+    # via distributed
 pyarrow==20.0.0
     # via mlflow
 pyasn1==0.6.1
@@ -139,20 +190,35 @@ pydantic-core==2.33.2
     # via pydantic
 pyparsing==3.2.3
     # via matplotlib
+python-box==7.3.2
+    # via prefect
 python-dateutil==2.9.0.post0
     # via
+    #   croniter
     #   graphene
     #   matplotlib
     #   pandas
+    #   pendulum
+    #   prefect
+python-slugify==8.0.4
+    # via prefect
 pytz==2025.2
-    # via pandas
+    # via
+    #   croniter
+    #   pandas
+    #   prefect
 pyyaml==6.0.2
-    # via mlflow-skinny
+    # via
+    #   dask
+    #   distributed
+    #   mlflow-skinny
+    #   prefect
 requests==2.32.4
     # via
     #   databricks-sdk
     #   docker
     #   mlflow-skinny
+    #   prefect
 rsa==4.9.1
     # via google-auth
 scikit-learn==1.7.0
@@ -169,6 +235,8 @@ smmap==5.0.2
     # via gitdb
 sniffio==1.3.1
     # via anyio
+sortedcontainers==2.4.0
+    # via distributed
 sqlalchemy==2.0.41
     # via
     #   alembic
@@ -177,8 +245,23 @@ sqlparse==0.5.3
     # via mlflow-skinny
 starlette==0.46.2
     # via fastapi
+tabulate==0.9.0
+    # via prefect
+tblib==3.1.0
+    # via distributed
+text-unidecode==1.3
+    # via python-slugify
 threadpoolctl==3.6.0
     # via scikit-learn
+toml==0.10.2
+    # via prefect
+toolz==1.0.0
+    # via
+    #   dask
+    #   distributed
+    #   partd
+tornado==6.5.1
+    # via distributed
 typing-extensions==4.14.0
     # via
     #   alembic
@@ -196,10 +279,14 @@ typing-extensions==4.14.0
 typing-inspection==0.4.1
     # via pydantic
 tzdata==2025.2
-    # via pandas
+    # via
+    #   pandas
+    #   pendulum
 urllib3==2.4.0
     # via
+    #   distributed
     #   docker
+    #   prefect
     #   requests
 uvicorn==0.34.3
     # via
@@ -207,5 +294,7 @@ uvicorn==0.34.3
     #   mlflow-skinny
 werkzeug==3.1.3
     # via flask
+zict==3.0.0
+    # via distributed
 zipp==3.23.0
     # via importlib-metadata
