--- a/requirements.txt
+++ b/requirements.txt
@@ -66,8 +66,28 @@ gitdb==4.0.12
     # via gitpython
 gitpython==3.1.44
     # via mlflow-skinny
+google-api-core==2.25.1
+    # via
+    #   google-cloud-core
+    #   google-cloud-storage
 google-auth==2.40.3
-    # via databricks-sdk
+    # via
+    #   databricks-sdk
+    #   google-api-core
+    #   google-cloud-core
+    #   google-cloud-storage
+google-cloud-core==2.4.3
+    # via google-cloud-storage
+google-cloud-storage==3.1.0
+    # via -r requirements.in
+google-crc32c==1.7.1
+    # via
+    #   google-cloud-storage
+    #   google-resumable-media
+google-resumable-media==2.7.2
+    # via google-cloud-storage
+googleapis-common-protos==1.70.0
+    # via google-api-core
 graphene==3.4.3
     # via mlflow
 graphql-core==3.2.6
@@ -170,8 +190,14 @@ pillow==11.2.1
     # via matplotlib
 prefect==1.4.1
     # via -r requirements.in
+proto-plus==1.26.1
+    # via google-api-core
 protobuf==6.31.1
-    # via mlflow-skinny
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
+    #   mlflow-skinny
+    #   proto-plus
 psutil==7.0.0
     # via distributed
 pyarrow==20.0.0
@@ -217,6 +243,8 @@ requests==2.32.4
     # via
     #   databricks-sdk
     #   docker
+    #   google-api-core
+    #   google-cloud-storage
     #   mlflow-skinny
     #   prefect
 rsa==4.9.1
