--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,26 @@
 #
 alembic==1.16.1
     # via mlflow
+altair==5.5.0
+    # via streamlit
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
     # via starlette
+attrs==25.3.0
+    # via
+    #   jsonschema
+    #   referencing
+    #   streamlit
 blinker==1.9.0
-    # via flask
+    # via
+    #   flask
+    #   streamlit
 cachetools==5.5.2
     # via
     #   google-auth
     #   mlflow-skinny
+    #   streamlit
 certifi==2025.4.26
     # via requests
 charset-normalizer==3.4.2
@@ -27,6 +37,7 @@ click==8.2.1
     #   flask
     #   mlflow-skinny
     #   prefect
+    #   streamlit
     #   uvicorn
 cloudpickle==3.1.1
     # via
@@ -65,7 +76,9 @@ fsspec==2025.5.1
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.44
-    # via mlflow-skinny
+    # via
+    #   mlflow-skinny
+    #   streamlit
 google-api-core==2.25.1
     # via
     #   google-cloud-core
@@ -109,16 +122,23 @@ importlib-metadata==8.7.0
     #   dask
     #   mlflow-skinny
     #   opentelemetry-api
+    #   streamlit
 importlib-resources==6.5.2
     # via prefect
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.6
     # via
+    #   altair
     #   distributed
     #   flask
+    #   pydeck
 joblib==1.5.1
     # via scikit-learn
+jsonschema==4.24.0
+    # via altair
+jsonschema-specifications==2025.4.1
+    # via jsonschema
 kiwisolver==1.4.8
     # via matplotlib
 locket==1.0.0
@@ -142,7 +162,10 @@ marshmallow==4.0.0
 marshmallow-oneofschema==3.2.0
     # via prefect
 matplotlib==3.10.3
-    # via mlflow
+    # via
+    #   -r requirements.in
+    #   mlflow
+    #   seaborn
 mlflow==3.1.0
     # via -r requirements.in
 mlflow-skinny==3.1.0
@@ -153,14 +176,21 @@ msgpack==1.1.1
     #   prefect
 mypy-extensions==1.1.0
     # via prefect
+narwhals==1.43.0
+    # via
+    #   altair
+    #   plotly
 numpy==2.3.0
     # via
     #   contourpy
     #   matplotlib
     #   mlflow
     #   pandas
+    #   pydeck
     #   scikit-learn
     #   scipy
+    #   seaborn
+    #   streamlit
 opentelemetry-api==1.34.1
     # via
     #   mlflow-skinny
@@ -172,22 +202,31 @@ opentelemetry-semantic-conventions==0.55b1
     # via opentelemetry-sdk
 packaging==25.0
     # via
+    #   altair
     #   dask
     #   distributed
     #   gunicorn
     #   matplotlib
     #   mlflow-skinny
+    #   plotly
     #   prefect
+    #   streamlit
 pandas==2.3.0
     # via
     #   -r requirements.in
     #   mlflow
+    #   seaborn
+    #   streamlit
 partd==1.4.2
     # via dask
 pendulum==3.1.0
     # via prefect
 pillow==11.2.1
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   streamlit
+plotly==6.1.2
+    # via -r requirements.in
 prefect==1.4.1
     # via -r requirements.in
 proto-plus==1.26.1
@@ -198,10 +237,13 @@ protobuf==6.31.1
     #   googleapis-common-protos
     #   mlflow-skinny
     #   proto-plus
+    #   streamlit
 psutil==7.0.0
     # via distributed
 pyarrow==20.0.0
-    # via mlflow
+    # via
+    #   mlflow
+    #   streamlit
 pyasn1==0.6.1
     # via
     #   pyasn1-modules
@@ -214,6 +256,10 @@ pydantic==2.11.6
     #   mlflow-skinny
 pydantic-core==2.33.2
     # via pydantic
+pydeck==0.9.1
+    # via streamlit
+pympler==1.1
+    # via streamlit
 pyparsing==3.2.3
     # via matplotlib
 python-box==7.3.2
@@ -226,6 +272,7 @@ python-dateutil==2.9.0.post0
     #   pandas
     #   pendulum
     #   prefect
+    #   streamlit
 python-slugify==8.0.4
     # via prefect
 pytz==2025.2
@@ -239,6 +286,10 @@ pyyaml==6.0.2
     #   distributed
     #   mlflow-skinny
     #   prefect
+referencing==0.36.2
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
 requests==2.32.4
     # via
     #   databricks-sdk
@@ -247,6 +298,11 @@ requests==2.32.4
     #   google-cloud-storage
     #   mlflow-skinny
     #   prefect
+    #   streamlit
+rpds-py==0.25.1
+    # via
+    #   jsonschema
+    #   referencing
 rsa==4.9.1
     # via google-auth
 scikit-learn==1.7.0
@@ -257,6 +313,10 @@ scipy==1.15.3
     # via
     #   mlflow
     #   scikit-learn
+seaborn==0.13.2
+    # via -r requirements.in
+semver==3.0.4
+    # via streamlit
 six==1.17.0
     # via python-dateutil
 smmap==5.0.2
@@ -273,6 +333,8 @@ sqlparse==0.5.3
     # via mlflow-skinny
 starlette==0.46.2
     # via fastapi
+streamlit==1.8.0
+    # via -r requirements.in
 tabulate==0.9.0
     # via prefect
 tblib==3.1.0
@@ -282,17 +344,22 @@ text-unidecode==1.3
 threadpoolctl==3.6.0
     # via scikit-learn
 toml==0.10.2
-    # via prefect
+    # via
+    #   prefect
+    #   streamlit
 toolz==1.0.0
     # via
     #   dask
     #   distributed
     #   partd
 tornado==6.5.1
-    # via distributed
+    # via
+    #   distributed
+    #   streamlit
 typing-extensions==4.14.0
     # via
     #   alembic
+    #   altair
     #   anyio
     #   fastapi
     #   graphene
@@ -302,6 +369,7 @@ typing-extensions==4.14.0
     #   opentelemetry-semantic-conventions
     #   pydantic
     #   pydantic-core
+    #   referencing
     #   sqlalchemy
     #   typing-inspection
 typing-inspection==0.4.1
@@ -310,6 +378,8 @@ tzdata==2025.2
     # via
     #   pandas
     #   pendulum
+tzlocal==5.3.1
+    # via streamlit
 urllib3==2.4.0
     # via
     #   distributed
@@ -320,6 +390,8 @@ uvicorn==0.34.3
     # via
     #   -r requirements.in
     #   mlflow-skinny
+validators==0.35.0
+    # via streamlit
 werkzeug==3.1.3
     # via flask
 zict==3.0.0
